tests/baselines/reference/pathMappingInheritedBaseUrl.errors.txt
/project/tsconfig.json(3,3): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /project/tsconfig.json (1 errors) ====
    {
      "extends": "../other/tsconfig.base.json",
      "compilerOptions": {
      ~~~~~~~~~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
        "module": "commonjs",
        "paths": {
          "p1": ["./lib/p1"]
        }
      }
    }
    
==== /project/index.ts (0 errors) ====
    import { p1 } from "p1";
    
==== /other/tsconfig.base.json (0 errors) ====
    {
      "compilerOptions": {
        "baseUrl": "."
      }
    }
    
==== /other/lib/p1/index.ts (0 errors) ====
    export const p1 = 0;
    